# perception_summer_trainee_project_iitb_racing

./: .gitignore  CMakeLists.txt  package.xml  readme.md
include/perception_winter/: process_lidar.hpp
launch/: main.launch.py
result_media/: output1.webm  output2.webm  output3.webm
rviz_config/: config.rviz
src/: main.cpp  process_lidar.cpp
