<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_winter</name>
  <version>0.0.0</version>
  <description>IITB Racing Trainee 2025 perception Winter Project.</description>
  <maintainer email="siddheshsp0@gmail.com">Siddhesh Phadke</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- Added by the author-->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>Open3D</depend>
    <depend>Eigen</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_msgs</depend>
    <!-- END -->

  </export>



</package>
